[gd_scene load_steps=6 format=3 uid="uid://tt0rj3pvsvc1"]

[ext_resource type="Texture2D" uid="uid://uh5lfrle3ua6" path="res://AG/AGMinigame2/PlayerBullet.png" id="1_vuhny"]
[ext_resource type="Script" uid="uid://dtmyovhqhdkvq" path="res://AG/AGMinigame2/bullet.gd" id="1_y7b7a"]
[ext_resource type="PackedScene" uid="uid://mg82ywl4vj3w" path="res://AG/AGMinigame2/bullet_particle.tscn" id="3_47sft"]
[ext_resource type="AudioStream" uid="uid://ddtawlbvl4r4q" path="res://AG/AGMinigame2/laserShoot.wav" id="4_dkdf6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vuhny"]
radius = 16.0
height = 48.0

[node name="Bullet" type="CharacterBody2D"]
script = ExtResource("1_y7b7a")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_vuhny")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_vuhny")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CapsuleShape2D_vuhny")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ParticleMarker" type="Marker2D" parent="."]
position = Vector2(0, 15)

[node name="BulletParticle" parent="." instance=ExtResource("3_47sft")]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="laser_se" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dkdf6")
volume_db = -8.0
autoplay = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
